--- a/code/style/style.css
+++ b/code/style/style.css
@@ -114,7 +114,7 @@ h1 {
 }
 
 .settings-addon {
-  min-width: 135px;
+  min-width: 150px;
 }
 
 .input-addon {
